<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eat! UBC</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="top_line">Stanley\'s Health Food Menu</string>
    <string name="burger">Burger</string>
    <string name="burger_price">$6.00</string>
    <string name="hint_num">0</string>
    <string name="take_out">Take Out</string>
    <string name="delivery">Delivery</string>
    <string name="fries">Fries</string>
    <string name="fries_price">$3.00</string>
    <string name="button">Place Order</string>
    <string name="title_activity_display_order">Display Order</string>
    <string name="action_search">Search</string>
    <string name="title_activity_tab1">Tab1</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_tab2">Tab2</string>
    <string name="title_activity_tab3">Tab3</string>
<<<<<<< HEAD
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="Login">Sign In</string>
    <string name="attempts">Attempts Left:</string>
    <string name="newaccount">Sign Up</string>
    <string name="register">Register</string>
=======
   <string name="username">Username:</string>
   <string name="password">Password:</string>
   <string name="Login">Login:</string>
   <string name="attempts">Attempts Left:</string>
    <string name ="newaccount">New Account</string>
	<string name = "register">register</string>
>>>>>>> origin/McDonaldsMenu
    <string name="title_activity_tabs_init">Order Now</string>
    <string name="FoodOption">Food</string>
    <string name="DrinkOption">Drink</string>
    <string name="title_activity_food_menu">Send Order</string>
    <string name="title_activity_drink_menu">DrinkMenuActivity</string>
    <string name="order_now_line">Order Now</string>
<<<<<<< HEAD
    <string name="order_history_line">Restaurant Location</string>
    <string name="restaurant1">Pit Pub Burger Bar</string>
=======
    <string name="order_history_line">Order History</string>
    <string name="restaurant1">PitPub Burger Bar</string>
>>>>>>> origin/McDonaldsMenu
    <string name="restaurant2">UBC Village McDonalds</string>
    <string name="title_restaurant_list">Restaurant List</string>


    <string name="facebook_login">Facebook Login</string>
    <string name="APP_ID">636751449730696</string>
<<<<<<< HEAD



    <string name="title_activity_map_location">Restaurant Location</string>


    <string name="title_activity_map">MapActivity</string>
=======
    
>>>>>>> origin/McDonaldsMenu


</resources>
